Fixed properties issue

--- a/{{cookiecutter.project_slug}}/template.yaml
+++ b/{{cookiecutter.project_slug}}/template.yaml
@@ -22,6 +22,7 @@ Mappings:
 Resources:
   ServiceFunction:
     Type: AWS::Serverless::Function
+    Properties:
       CodeUri: service/
       Events:
         Service:
